Addition of Title comments

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-/* Who are YOU??!! */
-body{
+/* Who are YOU??!!, I am the one they call Akeem Hertenstein, This assignment was for Cis 130 , Responsive Hawaiians a great double double entendre  */
+body {
   font-family: Helvetica, Arial, sans-serif;
   padding: 0;
   margin: 0;
@@ -7,16 +7,18 @@ body{
   box-sizing: border-box;
 }
 
-.container{
-  width:90%;
-  margin:auto;
+.container {
+  width: 90%;
+  margin: auto;
   max-width: 1200px;
   background-color: #fff;
 }
+
 header {
   background-color: #E9E9E9;
-	padding: 40px 25px;
+  padding: 40px 25px;
 }
+
 .cols {
   padding: 50px 10px 5px 10px;
   line-height: 1.5
@@ -27,64 +29,85 @@ img {
   height: auto;
   margin: 0 0 10px 0;
 }
-.col1, .col2, .col3 {
 
-  float:left;
-  width:30%;
-  margin-right:5%;
+.col1,
+.col2,
+.col3 {
+
+  float: left;
+  width: 30%;
+  margin-right: 5%;
 }
 
-.col3{
+.col3 {
   margin-right: 0%;
 }
-.main-content{
+
+.main-content {
   width: 65%;
-	float: left;
-	margin-right: 5%;
+  float: left;
+  margin-right: 5%;
 }
 
-.sidebar{
+.sidebar {
   width: 30%;
-	float: left;
+  float: left;
 }
-.sidebox-1{
+
+.sidebox-1 {
   background-color: #9bdaef;
-	padding: 20px;
-	font-size: 13px;
-	margin: 0 0 15px 0;
+  padding: 20px;
+  font-size: 13px;
+  margin: 0 0 15px 0;
 }
 
-.sidebox-2{
+.sidebox-2 {
   background-color: #efdb7f;
-	padding: 20px;
-	font-size: 13px;
-	margin: 0 0 15px 0;
+  padding: 20px;
+  font-size: 13px;
+  margin: 0 0 15px 0;
 }
 
-.clearfix:after { content: ""; display: table;clear: both; }
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 @media screen and (max-width: 998px) {
 
-  .col1, .col2 {
+  .col1,
+  .col2 {
     width: 45%;
   }
-  .col3{ width: 100%;} 
-}
-@media screen and (max-width:768px) {
-  .main-content{ 
+
+  .col3 {
     width: 100%;
-    float:none;
   }
-  .sidebar{
+}
+
+@media screen and (max-width:768px) {
+  .main-content {
+    width: 100%;
+    float: none;
+  }
+
+  .sidebar {
     width: 100%;
     float: none;
   }
 }
+
 @media screen and (max-width:596px) {
-  .col1, .col2 {
+
+  .col1,
+  .col2 {
     width: 100%;
   }
-  .sidebox-1 { display: none;}
 
-  
+  .sidebox-1 {
+    display: none;
+  }
+
+
 }
